('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.0.0
	- Switch from pow to powf to support AIX compiler issue.
		(CPAN bug #24579) [GSM]
	- Use adbin, not adsrc, when figuring out the sequence name for the 
		last_insert_id() method. This allows the function to work properly 
		if the sequence name is changed. Not that {pg_cache=>0} should be 
		passed to the function if you expect this might happen.
		(CPAN bug #30924) [GSM]
	- Use unsigned chars when parsing passed-in queries, preventing UTF-8 
		strings from ruining the prepare. UTF-16 may still cause problems.
		(CPAN bug #31577) [GSM]
	- Fix crash when executing query with two placeholders side by side.
      Thanks to Daniel Browning for spotting this. [GSM]
	- Fix bad PG_INTEGER example in docs, thanks to Xavi Drudis Ferran.
		(CPAN bug #31545) [GSM]
	- Force SQL_REAL and SQL_NUMERIC to be float8 not float4.
		(CPAN bug #30010) [GSM]
	- Fix memory leak when using savepoints. (CPAN bug #29791)
		[airwave@cpan.org]
	- Allow data_sources to accept optional arguments. [GSM]
	- Change versioning system to three numbered system.
	- Make sure array items are marked as UTF as needed.
		(CPAN bug #29656) [GSM]		
	- Add support for arrays: can pass in arrayrefs to execute, and 
		they are automatically returned as arrays when fetching. [GSM]
	- Overhauled the data type system. [GSM]
	- Fix bug in last_insert_id. (CPAN bug #15918) [orentocy@gmail.com]
	- Complain loudly and fail to proceed if Makefile.PL finds no -lpq [GSM]
	- Fix META.yml file. (CPAN bug #25759) [GSM]
	- Force column names to respect utf8-ness. Per report from Ch Lamprect. [GSM]
	- Add support for asynchronous queries. [GSM]
	- Make minimum supported server 7.4. [GSM]
	- Add private_attribute_info() method. [GSM]
	- Add SQL_INTERVAL and others to types.c [GSM]
	- Change $dbh->{Name} to return the entire DSN string, minus the 
		'dbi:Pg:' part. Thanks to Mark Stosberg for the idea. [GSM]